# pa_7th_sem

./: README.md
exam/go/: go.mod  go.sum  main.go
exam/py/: main.py  pyproject.toml
lab1/: pom.xml
lab1/src/main/kotlin/com/example/lab1/: Lab1Application.kt
lab4/: docker-compose.yaml  pyproject.toml
lab4/src/: config.py  custom_exceptions.py  deps.py  main.py  rules.py  utils.py
lab4/src/crud/: __init__.py  base.py  products.py  users.py
lab4/src/db/: db.py  db_init.py  models.py
lab4/src/routers/: auth.py  orders.py  products.py  users.py
lab4/src/schemas/: product.py  user.py
lab4/src/service/: order.py  product.py  token.py  user.py
lab4/tests/: fixtures.py  integration_test.py
lab5/: .env  Dockerfile  docker-compose.yml  pyproject.toml
lab5/rules_service/admin_panel/: settings.py
lab5/rules_service/rules/: admin.py  forms.py  models.py
lab5/rules_service/rules/migrations/: 0001_initial.py
