[project]
name = "lab4"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.115.11",
    "passlib[argon2]>=1.7.4",
    "pydantic[email]>=2.10.6",
    "pydantic-settings>=2.8.1",
    "sqlalchemy>=2.0.38",
    "uvicorn>=0.34.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.2.0",
    "testcontainers>=4.13.2",
]
